# game_route_search

./: .gitignore  demo_inspection.py  pyproject.toml  requirements.txt
data/: elevation_phase2.txt  maze.txt  sample_map.txt  simple_map.txt  terrain_phase2.txt
docs/: AGSP_SKILLS_CATALOG.md  INTELLIGENCE_REPORT.md  RULES.md  SITREP_2026-01-29.md  SITREP_v2_2026-01-29.md  SITREP_v3_2026-01-29.md  SPECIFICATION.md  経路探索デモンストレーション報告書.md
docs/strategy/: 02_ISOMETRIC_ELEVATION_WHITE_PAPER.md  02_TERRAIN_COST_MATRIX.md  terrain_costs.csv
src/: __init__.py  cli.py  cli_v2.py  coordinates.py  cost_function.py  finder.py  graph_builder.py  main.py  map_loader.py  map_loader_v2.py  search.py  visualize.py
src/constants/: __init__.py  terrain_costs.py
tests/: __init__.py  test_cli.py  test_cli_v2.py  test_coordinates.py  test_cost_function.py  test_final_inspection.py  test_finder.py  test_graph_builder.py  test_map_loader.py  test_map_loader_v2.py  test_search.py  test_strategic_behavior.py  test_visualize.py
